--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,9 @@ spacy
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
 pandas
 plotly
+--extra-index-url https://download.pytorch.org/whl/cpu
+torch
+transformers
 sentence-transformers
 scikit-learn
 jinja2
