--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ jinja2
 requests
 streamlit-lottie
 plotly
-spacy==3.7.2
+spacy>=3.7.2,<3.8.0
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
 torch
 transformers
