Xhtml2pdf added to requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,4 @@ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1
 torch
 transformers
 sentence-transformers
+xhtml2pdf
